--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>ChatPoint • Premium</title>
-
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   <style>
     :root {
       --bg: #0d0e12;
@@ -21,7 +19,6 @@
       --radius: 18px;
       --shadow: rgba(0,0,0,0.55);
     }
-
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family:"Outfit",sans-serif;
@@ -29,7 +26,6 @@
       color:var(--text);
       overflow-x:hidden;
     }
-
     /* HEADER */
     header {
       position:sticky;
@@ -42,7 +38,6 @@
       align-items:center;
       border-bottom:1px solid var(--border);
     }
-
     .nav-btn {
       width:46px;
       height:46px;
@@ -55,9 +50,7 @@
       color:var(--primary);
       transition:0.25s;
     }
-
     .nav-btn:hover { background:rgba(255,255,255,0.1); }
-
     .brand {
       font-size:26px;
       font-weight:900;
@@ -65,13 +58,11 @@
       color:var(--primary);
       letter-spacing:-0.5px;
     }
-
     .header-right {
       margin-left:auto;
       display:flex;
       gap:12px;
     }
-
     .orders-btn, .cart-btn {
       padding:10px 18px;
       border-radius:14px;
@@ -81,17 +72,14 @@
       border:none;
       transition:0.25s;
     }
-
     .orders-btn {
       background:var(--primary);
       color:#000;
     }
-
     .cart-btn {
       background:#ffffff;
       color:#000;
     }
-
     /* SIDEBAR */
     #sidebar {
       position:fixed;
@@ -104,9 +92,7 @@
       z-index:1000;
       border-right:1px solid var(--border);
     }
-
     #sidebar.active { transform:translateX(0); }
-
     #overlay {
       position:fixed;
       inset:0;
@@ -116,12 +102,10 @@
       transition:0.3s ease;
       z-index:999;
     }
-
     #overlay.active {
       opacity:1;
       pointer-events:auto;
     }
-
     .profile-section {
       padding:20px;
       background:#0f1014;
@@ -130,7 +114,6 @@
       font-weight:700;
       font-size:20px;
     }
-
     nav a {
       display:block;
       padding:14px 18px;
@@ -139,12 +122,10 @@
       font-weight:600;
       transition:0.25s;
     }
-
     nav a:hover {
       background:var(--glass);
       color:var(--primary);
     }
-
     /* OFFER BANNER */
     .offer-banner {
       max-width:960px;
@@ -156,29 +137,24 @@
       box-shadow:0 20px 50px rgba(0,0,0,0.55);
       text-align:center;
     }
-
     .offer-title {
       font-size:2.4rem;
       font-weight:900;
       color:var(--primary);
     }
-
     .offer-text {
       font-size:1.3rem;
       color:var(--text);
       margin-top:10px;
       font-weight:600;
     }
-
     .highlight { color:var(--primary); }
-
     /* SEARCH BAR */
     .search-bar {
       max-width:600px;
       margin:0 auto 32px;
       position:relative;
     }
-
     .search-bar input {
       width:100%;
       padding:16px 20px 16px 54px;
@@ -188,13 +164,11 @@
       color:var(--text);
       font-size:17px;
     }
-
     .search-bar input:focus {
       border-color:var(--primary);
       box-shadow:0 0 8px var(--primary);
       outline:none;
     }
-
     .search-bar i {
       position:absolute;
       left:20px;
@@ -203,7 +177,6 @@
       font-size:20px;
       color:var(--primary);
     }
-
     /* GRID */
     .grid {
       display:grid;
@@ -213,12 +186,13 @@
       max-width:960px;
       margin:auto;
     }
-
     @media(min-width:600px){
       .grid { grid-template-columns:repeat(auto-fit,minmax(330px,1fr)); }
     }
-
-    /* CARDS (same structure as index.js creates) */
+    /* CARDS */
+    .card-wrap {
+      position: relative;
+    }
     .card {
       background:var(--card);
       border-radius:var(--radius);
@@ -227,31 +201,27 @@
       transition:0.35s ease;
       cursor:pointer;
     }
-
     .card:hover {
       transform:translateY(-8px);
       box-shadow:0 20px 50px rgba(0,0,0,0.7);
     }
-
     .card img {
       width:100%;
       height:180px;
       object-fit:cover;
       opacity:0.85;
     }
-
     .info {
       padding:14px 18px;
       display:flex;
       justify-content:space-between;
+      align-items:center;
     }
-
     .shop-name {
       font-size:18px;
       font-weight:800;
       color:var(--text);
     }
-
     .rating {
       background:var(--primary);
       color:#000;
@@ -262,12 +232,37 @@
       align-items:center;
       gap:6px;
     }
-
     .desc {
       padding:0 18px 14px;
       color:var(--text-muted);
+      font-size:14px;
     }
-
+    .items-row {
+      padding:0 18px 16px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+    }
+    .item-pill {
+      background:var(--glass);
+      color:var(--text);
+      padding:6px 12px;
+      border-radius:999px;
+      font-size:13px;
+      font-weight:500;
+    }
+    .badge-offer {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: var(--primary);
+      color: #000;
+      padding: 6px 12px;
+      border-radius: 999px;
+      font-size: 13px;
+      font-weight: 700;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    }
     footer {
       text-align:center;
       padding:24px;
@@ -278,13 +273,10 @@
     }
   </style>
 </head>
-
 <body>
-
 <header>
   <button id="navBtn" class="nav-btn"><i class="fas fa-bars"></i></button>
   <div class="brand">ChatPoint</div>
-
   <div class="header-right">
     <button class="orders-btn" onclick="location.href='tracking.html'">My Orders</button>
     <button class="cart-btn" onclick="location.href='cart.html'"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -295,11 +287,10 @@
 <div id="sidebar">
   <div class="profile-section">Menu</div>
   <nav>
-    <a href="tracking.html"><i class="fa-solid fa-bag-shopping"></i> &nbsp; My Orders</a>
-    <a href="tel:9632367397"><i class="fa-solid fa-phone"></i> &nbsp; Contact Us</a>
+    <a href="tracking.html"><i class="fa-solid fa-bag-shopping"></i>   My Orders</a>
+    <a href="tel:9632367397"><i class="fa-solid fa-phone"></i>   Contact Us</a>
   </nav>
 </div>
-
 <div id="overlay"></div>
 
 <!-- OFFER BANNER -->
@@ -314,35 +305,157 @@
   <i class="fas fa-search"></i>
 </div>
 
-<!-- SHOP GRID (filled by index.js) -->
+<!-- SHOP GRID -->
 <section class="grid" id="grid"></section>
 
 <footer>© ChatPoint • Premium Edition</footer>
 
-<script src="index.js"></script>
-
 <script>
-  // Sidebar
-  navBtn.onclick = () => {
-    sidebar.classList.add("active");
-    overlay.classList.add("active");
-  };
-
-  overlay.onclick = () => {
-    sidebar.classList.remove("active");
-    overlay.classList.remove("active");
-  };
-
-  // Search
-  function searchShops() {
-    const text = document.getElementById("searchInput").value.toLowerCase();
-    filterShops(text); // your index.js function
+// Shop data
+const shops = [
+  {
+    name: "connect with Pizza",
+    img: "https://plus.unsplash.com/premium_photo-1679924471091-f7cd7ad90ddf?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+    rating: 4.6,
+    desc: "100% veg pizzas, light & tasty.",
+    items: ["Paneer Tikka", "Corn & Cheese", "nugets ", "Veg Extravaganza"]
+  },
+  {
+    name: "Hasanamba Iyengar Bakery",
+    img: "https://plus.unsplash.com/premium_photo-1665669263531-cdcbe18e7fe4?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmFrZXJ5fGVufDB8fDB8fHww",
+    rating: 4.5,
+    desc: "Fresh baked goods and sweet treats.",
+    items: ["Cake", "Puff", "rolls", "Puff Pastry"]
+  },
+  {
+    name: "Sangambar Udupi Hotel",
+    img: "https://plus.unsplash.com/premium_photo-1673108852141-e8c3c22a4a22?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9vZHxlbnwwfHwwfHx8MA%3D%3D",
+    rating: 4.6,
+    desc: "Pure vegetarian South Indian meals.",
+    items: ["Masala Dosa", "Idli Vada", "Puri Bhaji", "Coffee"]
+  },
+  {
+    name: "Pizza Spot",
+    img: "https://plus.unsplash.com/premium_photo-1723478418445-b13c20b21231?q=80&w=1125&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+    rating: 4.5,
+    desc: "Loaded pizzas with fresh toppings.",
+    items: ["momos", "pizza", "burger", "juice", "Veggie pizza", "pav bhaji"]
+  },
+  {
+    name: "Nandi Grand Hotels",
+    img: "https://plus.unsplash.com/premium_photo-1674106347866-8282d8c19f84?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI5fHxmb29kfGVufDB8fDB8fHww",
+    rating: 4.7,
+    desc: "Crispy dosas with authentic flavors.",
+    items: ["Plain Dosa", "Ghee Roast", "Onion Uttapam", "Podi Idli"]
+  },
+  {
+    name: "Mister Chef",
+    img: "https://images.unsplash.com/photo-1594179047519-f347310d3322?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8ZmFzdCUyMGZvb2R8ZW58MHx8MHx8fDA%3D",
+    rating: 4.7,
+    desc: "Juicy burgers with secret sauce.",
+    items: ["Classic Burger", "Cheese Blast", "Veg Crunch", "Fries Combo"]
+  },
+  {
+    name: "Dolphin Hotel",
+    img: "https://images.unsplash.com/photo-1496412705862-e0088f16f791?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGZvb2QlMjBwaG90b2dyYXBoeXxlbnwwfHwwfHx8MA%3D%3D",
+    rating: 4.5,
+    desc: "Fresh sandwiches & healthy bites.",
+    items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "rice", "panner", "Cold Coffee"]
   }
+];
 
-  window.onload = () => {
-    loadShops(); // your index.js main function
-  };
+// Render shops function
+function renderShops(filter = "") {
+  const grid = document.getElementById("grid");
+  grid.innerHTML = "";
+
+  shops
+    .filter(shop => shop.name.toLowerCase().includes(filter.toLowerCase()))
+    .forEach(shop => {
+      const cardWrap = document.createElement("div");
+      cardWrap.className = "card-wrap";
+
+      const card = document.createElement("div");
+      card.className = "card";
+      card.role = "button";
+      card.tabIndex = 0;
+
+      card.onclick = () => {
+        localStorage.setItem("currentShop", JSON.stringify({ name: shop.name, items: shop.items }));
+        location.href = `items.html?shop=${encodeURIComponent(shop.name)}`;
+      };
+
+      card.onkeydown = e => { if (e.key === "Enter") card.click(); };
+
+      const img = document.createElement("img");
+      img.src = shop.img;
+      img.alt = `${shop.name} image`;
+      img.loading = "lazy";
+      img.onerror = function() {
+        this.src = `https://via.placeholder.com/420x260/2874F0/FF9800?text=${encodeURIComponent(shop.name)}`;
+      };
+
+      const badge = document.createElement("div");
+      badge.className = "badge-offer";
+      badge.textContent = shop.rating >= 4.7 ? "⭐ TOP RATED" : "🔥 OFFER";
+
+      const info = document.createElement("div");
+      info.className = "info";
+      info.innerHTML = `
+        <div class="shop-name">${shop.name}</div>
+        <div class="rating" aria-label="Rating ${shop.rating}">
+          <i class="fas fa-star"></i> ${shop.rating}
+        </div>
+      `;
+
+      const desc = document.createElement("div");
+      desc.className = "desc";
+      desc.textContent = shop.desc;
+
+      const itemsRow = document.createElement("div");
+      itemsRow.className = "items-row";
+      shop.items.slice(0, 4).forEach(item => {
+        const pill = document.createElement("div");
+        pill.className = "item-pill";
+        pill.textContent = item.trim();
+        itemsRow.appendChild(pill);
+      });
+
+      card.append(img, info, desc, itemsRow);
+      cardWrap.appendChild(card);
+
+      // Randomly show badge (as in your original logic)
+      if (Math.random() > 0.4) {
+        cardWrap.appendChild(badge);
+      }
+
+      grid.appendChild(cardWrap);
+    });
+}
+
+// Search handler
+function searchShops() {
+  const query = document.getElementById("searchInput").value.trim();
+  renderShops(query);
+}
+
+// Sidebar toggle
+document.getElementById("navBtn").onclick = () => {
+  document.getElementById("sidebar").classList.add("active");
+  document.getElementById("overlay").classList.add("active");
+};
+
+document.getElementById("overlay").onclick = () => {
+  document.getElementById("sidebar").classList.remove("active");
+  document.getElementById("overlay").classList.remove("active");
+};
+
+// Initial load
+window.onload = () => {
+  renderShops();
+  // You can keep loadProfile() if you plan to use it later
+  // loadProfile();
+};
 </script>
-
 </body>
 </html>
