--- a/payment.html
+++ b/payment.html
@@ -4,28 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout | ChatPoint</title>
-
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <style>
         :root {
-            --bg: #FDFBF7;
-            --card: #FFFFFF;
-            --primary: #C93C2E;
-            --primary-dark: #B32F24;
-            --text: #2A241D;
-            --text-muted: #706A62;
-            --border: #E8DFD3;
-            --danger: #D95F45;
-            --radius: 16px;
-            --shadow-sm: 0 4px 16px rgba(0,0,0,0.06);
-            --shadow-md: 0 8px 32px rgba(0,0,0,0.08);
-            --transition: all 0.25s ease;
+            --bg: #0d0e12;
+            --card: #14151a;
+            --text: #e6e6e6;
+            --text-muted: #9b9ca1;
+            --primary: #e6b25c;
+            --primary-dark: #bb8c3d;
+            --glass: rgba(255,255,255,0.06);
+            --border: rgba(255,255,255,0.08);
+            --radius: 18px;
+            --shadow: rgba(0,0,0,0.55);
+            --success: #28a745;
         }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
+        * { margin:0; padding:0; box-sizing:border-box; }
         body {
             font-family: 'Outfit', sans-serif;
             background: var(--bg);
@@ -34,7 +30,6 @@
             padding: 1.2rem;
             line-height: 1.6;
         }
-
         .container {
             max-width: 620px;
             margin: 0 auto;
@@ -42,117 +37,155 @@
             border-radius: var(--radius);
             padding: 2.2rem;
             border: 1px solid var(--border);
-            box-shadow: var(--shadow-md);
+            box-shadow: 0 12px 40px var(--shadow);
         }
-
         h2 {
             text-align: center;
             margin-bottom: 1.8rem;
             color: var(--primary);
-            font-size: 2rem;
-            font-weight: 800;
+            font-size: 2.2rem;
+            font-weight: 900;
         }
-
-        .form-group { margin-bottom: 1.4rem; }
-
+        .form-group { margin-bottom: 1.5rem; }
         label {
             display: block;
             margin-bottom: 0.6rem;
             font-weight: 600;
             font-size: 1.05rem;
+            color: var(--text);
         }
-
         input, textarea {
             width: 100%;
             padding: 1rem;
-            border-radius: 12px;
+            border-radius: 14px;
             border: 1px solid var(--border);
-            background: #fffef9;
+            background: #1a1b20;
+            color: var(--text);
             font-size: 1.05rem;
-            transition: var(--transition);
+            transition: all 0.25s ease;
         }
-
         input:focus, textarea:focus {
             outline: none;
             border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(201,60,46,0.15);
+            box-shadow: 0 0 0 3px rgba(230,178,92,0.2);
         }
-
         /* SUMMARY */
         .cart-summary {
-            background: rgba(201,60,46,0.03);
-            padding: 1.5rem;
-            border-radius: 14px;
-            margin: 1.8rem 0;
-            border: 1px solid rgba(201,60,46,0.15);
+            background: var(--glass);
+            padding: 1.6rem;
+            border-radius: 16px;
+            margin: 2rem 0;
+            border: 1px solid var(--border);
         }
-
         .cart-item {
             display: flex;
             justify-content: space-between;
-            padding: 0.8rem 0;
+            padding: 0.9rem 0;
             border-bottom: 1px dashed var(--border);
             font-size: 1.05rem;
         }
-
         .delivery-free {
-            color: #2e7d32;
+            color: #4caf50;
             font-weight: 700;
         }
-
         .total-row {
             display: flex;
             justify-content: space-between;
-            font-weight: 800;
-            font-size: 1.5rem;
-            margin-top: 1.2rem;
-            padding-top: 1.2rem;
+            font-weight: 900;
+            font-size: 1.6rem;
+            margin-top: 1.4rem;
+            padding-top: 1.4rem;
             border-top: 2px solid var(--primary);
             color: var(--primary);
         }
-
         .btn {
             width: 100%;
-            padding: 1.3rem;
-            font-size: 1.25rem;
-            font-weight: 700;
+            padding: 1.4rem;
+            font-size: 1.3rem;
+            font-weight: 800;
             border: none;
-            border-radius: 14px;
+            border-radius: 16px;
             background: var(--primary);
-            color: white;
+            color: #000;
             cursor: pointer;
-            margin-top: 1.8rem;
-            transition: var(--transition);
-            box-shadow: 0 6px 20px rgba(201,60,46,0.25);
+            margin-top: 2rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 8px 24px rgba(230,178,92,0.3);
         }
-
         .btn:hover:not(:disabled) {
             background: var(--primary-dark);
-            transform: translateY(-3px);
+            transform: translateY(-4px);
         }
-
+        .btn:disabled {
+            background: #444;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+        }
         .msg {
             text-align: center;
-            padding: 1.2rem;
-            border-radius: 12px;
-            margin: 1rem 0;
-            font-weight: 600;
-            font-size: 1.15rem;
+            padding: 1.4rem;
+            border-radius: 14px;
+            margin: 1.2rem 0;
+            font-weight: 700;
+            font-size: 1.2rem;
             display: none;
         }
-
-        .success { background: rgba(0,150,100,0.15); color: #006644; }
-        .error { background: rgba(217,95,69,0.12); color: var(--danger); }
-
+        .success {
+            background: rgba(40,167,69,0.15);
+            color: #4caf50;
+            border: 1px solid rgba(40,167,69,0.3);
+        }
+        .error {
+            background: rgba(220,53,69,0.12);
+            color: #dc3545;
+            border: 1px solid rgba(220,53,69,0.3);
+        }
+        /* Popup */
+        #orderPopup {
+            position: fixed;
+            inset: 0;
+            background: rgba(0,0,0,0.75);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 2000;
+        }
+        .popup-content {
+            background: var(--card);
+            border-radius: var(--radius);
+            padding: 3rem 2.5rem;
+            text-align: center;
+            border: 2px solid var(--primary);
+            box-shadow: 0 20px 60px rgba(0,0,0,0.7);
+            max-width: 90%;
+        }
+        .popup-content h2 {
+            margin-bottom: 1rem;
+            font-size: 2.2rem;
+        }
+        .popup-content p {
+            font-size: 1.3rem;
+            margin-bottom: 2rem;
+            color: var(--text-muted);
+        }
         @media (max-width: 480px) {
-            .container { padding: 1.6rem; }
+            .container { padding: 1.8rem; }
+            h2 { font-size: 1.9rem; }
         }
     </style>
 </head>
-
 <body>
-
 <div class="container" id="mainContainer"></div>
+
+<!-- Success Popup -->
+<div id="orderPopup">
+    <div class="popup-content">
+        <h2>Order Placed Successfully!</h2>
+        <p>Redirecting to WhatsApp...</p>
+        <i class="fas fa-check-circle" style="font-size:5rem;color:#4caf50;margin:1rem 0;"></i>
+    </div>
+</div>
 
 <script>
     // Storage Keys
@@ -160,10 +193,13 @@
     const USER_KEY = "chatpoint_user";
 
     // WhatsApp numbers
-    const PRIMARY = "9632367397";
+    const PRIMARY = "9739632364";
     const BACKUP = "8088975913";
 
-    // Delivery Logic
+    // Backend API endpoint
+    const BACKEND_URL = "https://chatpoint-3ycy.onrender.com/api/orders";
+
+    // Special water item logic
     const WATER = { shop: "_special_", name: "1L Pure Water Bottle", price: 13 };
 
     function hasWater(cart) {
@@ -188,14 +224,14 @@
         return main < 100 ? 25 : 22;
     }
 
-    // Check login
+    // Check if user is logged in
     function checkLogin() {
         const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
         if (!user || !user.phone) {
             document.getElementById("mainContainer").innerHTML = `
-                <div style="text-align:center; padding:6rem 1rem;">
-                    <h3>Please Login</h3>
-                    <p><a href="login.html" style="color:var(--primary); font-weight:700;">Login →</a></p>
+                <div style="text-align:center; padding:8rem 1rem;">
+                    <h3>Please Login First</h3>
+                    <p><a href="login.html" style="color:var(--primary); font-weight:800;">Login →</a></p>
                 </div>`;
             return null;
         }
@@ -205,27 +241,23 @@
     // Render checkout form
     function renderForm(user) {
         const savedCart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
-
         if (Object.keys(savedCart).length === 0) {
             document.getElementById("mainContainer").innerHTML = `
-                <div style="text-align:center; padding:6rem 1rem;">
+                <div style="text-align:center; padding:8rem 1rem;">
                     <h3>Cart is Empty</h3>
-                    <p><a href="index.html" style="color:var(--primary); font-weight:700;">Shop Now →</a></p>
+                    <p><a href="index.html" style="color:var(--primary); font-weight:800;">Shop Now →</a></p>
                 </div>`;
             return;
         }
 
         let itemsArray = [];
         let subtotal = 0;
-        let shopName = "ChatPoint";
+        let shopName = "Multiple Shops";
 
-        // Fetch items EXACTLY from cart
         Object.keys(savedCart).forEach(shop => {
             if (shop !== WATER.shop) shopName = shop;
-
             Object.keys(savedCart[shop]).forEach(itemName => {
                 const item = savedCart[shop][itemName];
-
                 if (item.qty > 0) {
                     itemsArray.push({
                         name: itemName,
@@ -240,52 +272,52 @@
         const deliveryCharge = getDeliveryCharge(savedCart);
         const grandTotal = subtotal + deliveryCharge;
 
-        // Store temp order data
-        window.tempOrderData = { itemsArray, subtotal, shopName, deliveryCharge, grandTotal };
+        window.tempOrderData = { 
+            itemsArray, 
+            subtotal, 
+            shopName, 
+            deliveryCharge, 
+            grandTotal, 
+            cart: savedCart 
+        };
 
         document.getElementById("mainContainer").innerHTML = `
             <h2>Checkout</h2>
-
             <div id="successMsg" class="msg success"></div>
             <div id="errorMsg" class="msg error"></div>
 
             <div class="form-group">
                 <label>Name *</label>
-                <input id="name" value="${user.name || ''}" />
+                <input id="name" value="${user.name || ''}" required />
             </div>
-
             <div class="form-group">
                 <label>Phone *</label>
-                <input id="phone" value="${user.phone || ''}" />
+                <input id="phone" value="${user.phone || ''}" required />
             </div>
-
             <div class="form-group">
                 <label>Address Line 1 *</label>
-                <textarea id="address1" rows="2"></textarea>
+                <textarea id="address1" rows="2" required></textarea>
             </div>
-
             <div class="form-group">
                 <label>Address Line 2 (optional)</label>
                 <textarea id="address2" rows="2"></textarea>
             </div>
 
             <div class="cart-summary">
-                <h3 style="margin-bottom:12px;color:var(--primary);">Order Summary</h3>
-
+                <h3 style="margin-bottom:1rem;color:var(--primary);">Order Summary</h3>
                 ${itemsArray.map(i => `
                     <div class="cart-item">
                         <span>${i.name} × ${i.quantity}</span>
                         <span>₹${i.price * i.quantity}</span>
                     </div>
                 `).join('')}
-
                 <div class="cart-item"><b>Subtotal</b><b>₹${subtotal}</b></div>
-                <div class="cart-item"><b>Delivery</b> 
+                <div class="cart-item">
+                    <b>Delivery</b>
                     <b class="${deliveryCharge===0?'delivery-free':''}">
                         ${deliveryCharge === 0 ? 'FREE' : '₹' + deliveryCharge}
                     </b>
                 </div>
-
                 <div class="total-row">
                     <span>Total</span>
                     <span>₹${grandTotal}</span>
@@ -298,7 +330,7 @@
         document.getElementById("placeOrderBtn").onclick = placeOrder;
     }
 
-    // Place order
+    // Place order function
     async function placeOrder() {
         const name = document.getElementById("name").value.trim();
         const phone = document.getElementById("phone").value.trim();
@@ -310,31 +342,89 @@
             return;
         }
 
-        const { itemsArray, subtotal, shopName, deliveryCharge, grandTotal } = window.tempOrderData;
+        const placeBtn = document.getElementById("placeOrderBtn");
+        placeBtn.disabled = true;
+        placeBtn.textContent = "Processing...";
 
-        const savedCart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
+        const { itemsArray, subtotal, shopName, deliveryCharge, grandTotal, cart } = window.tempOrderData;
 
-        // Build cart for backend
-        const orderCart = {};
-        Object.keys(savedCart).forEach(shop => {
-            orderCart[shop] = savedCart[shop];
+        // Prepare data for MongoDB
+        const orderData = {
+            user: { name, phone },
+            shop: shopName,
+            items: itemsArray.map(item => ({
+                name: item.name,
+                price: item.price,
+                quantity: item.quantity
+            })),
+            totalAmount: grandTotal,
+            deliveryCharge: deliveryCharge,
+            address: {
+                name,
+                phone,
+                line1: address1,
+                line2: address2 || ""
+            },
+            paymentMethod: "cash",
+            status: "pending",
+            date: new Date()
+        };
+
+        try {
+            // 1. Try to save to backend
+            const response = await fetch(BACKEND_URL, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(orderData)
+            });
+
+            // We don't strictly require success here — proceed even if backend fails
+            // (WhatsApp is the main confirmation method)
+
+            // 2. Show success popup with confetti
+            showSuccessPopup();
+
+            // 3. Prepare WhatsApp message
+            const orderSummary = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
+            const finalMsg = `NEW ORDER\n\n${orderSummary}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? '\n'+address2 : ''}\nSubtotal: ₹${subtotal}\nDelivery: ${deliveryCharge === 0 ? 'FREE' : '₹'+deliveryCharge}\nTotal: ₹${grandTotal}`;
+
+            const encoded = encodeURIComponent(finalMsg);
+
+            // 4. Open WhatsApp after popup delay
+            setTimeout(() => {
+                window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, "_blank");
+                setTimeout(() => {
+                    window.open(`https://wa.me/91${BACKUP}?text=${encoded}`, "_blank");
+                }, 1200);
+            }, 2800);
+
+            // 5. Clear cart
+            localStorage.removeItem(CART_KEY);
+
+            // 6. Redirect to tracking page after delay
+            setTimeout(() => {
+                window.location.href = "tracking.html";
+            }, 4500);
+
+        } catch (err) {
+            console.error("Order placement error:", err);
+            showError("Failed to process order. Please try again or contact support.");
+            placeBtn.disabled = false;
+            placeBtn.textContent = "Place Order (COD)";
+        }
+    }
+
+    function showSuccessPopup() {
+        const popup = document.getElementById("orderPopup");
+        popup.style.display = "flex";
+
+        // Confetti animation
+        confetti({
+            particleCount: 120,
+            spread: 80,
+            origin: { y: 0.6 },
+            colors: ['#e6b25c', '#ffffff', '#bb8c3d', '#4caf50']
         });
-
-        const orderSummary = itemsArray.map(i => `${i.name} × ${i.quantity}`).join("\n");
-
-        const finalMsg = `NEW ORDER\n\n${orderSummary}\n\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2 ? '\n'+address2 : ''}\nSubtotal: ₹${subtotal}\nDelivery: ${deliveryCharge === 0 ? 'FREE' : '₹'+deliveryCharge}\nTotal: ₹${grandTotal}`;
-
-        const encoded = encodeURIComponent(finalMsg);
-
-        // Send to WhatsApp
-        window.open(`https://wa.me/91${PRIMARY}?text=${encoded}`, "_blank");
-        setTimeout(() => window.open(`https://wa.me/91${BACKUP}?text=${encoded}`, "_blank"), 1500);
-
-        // Clear Cart
-        localStorage.removeItem(CART_KEY);
-
-        showSuccess("Order Sent to Restaurant on WhatsApp!");
-        setTimeout(() => window.location.href = "tracking.html", 2000);
     }
 
     function showSuccess(msg) {
@@ -351,11 +441,11 @@
         document.getElementById("successMsg").style.display = "none";
     }
 
+    // Initialize on page load
     window.onload = () => {
         const user = checkLogin();
         if (user) renderForm(user);
-    }
+    };
 </script>
-
 </body>
 </html>
